Fixed long app descriptions from overflowing

--- a/src/main/webapp/studio/static/themes/default/css/theme.css
+++ b/src/main/webapp/studio/static/themes/default/css/theme.css
@@ -3158,6 +3158,6 @@ table.dataTable th:active {
 }
 
 /* Fixing long descriptions */
-#my_apps_grid td {
-  display: inline-block;
+#my_apps_grid, #templates_grid {
+  table-layout: fixed;
 }
